src/frontend/src/styles/globals.scss
@use '@gouvfr-lasuite/ui-kit/sass/fonts';
@use '@gouvfr-lasuite/ui-kit/style';
@use './cunningham-tokens.css';

@use './../layout/LogoApp';
@use './../layout/ConnectedLayout';
@use './../layout/HeaderRight';
@use './../components/Card';
@use './../components/Pagination';
@use './../features/ui/preview/preview';
@use './../features/recordings/components/RecordComponent';
@use './../components/ProgressBar';
@use './../features/recordings/components/ListRecordings';
@use './../features/recordings/components/Transcript';
@use './../features/files/components/FileUploadToast';
@use './../features/ui/components/toaster';
@use './../pages/RecordingPage';
@use './../pages/RecordingsPage';
@use './../pages/HomePage';

// Buggy otherwise for some reason
.c__avatar__initials {
  width: 24px;
}

body {
  margin: 0;
}

* {
  box-sizing: border-box;
}

.p-2xs {
  padding: var(--c--globals--spacings--2xs);
}

.p-xs {
  padding: var(--c--globals--spacings--xs);
}

.p-sm {
  padding: var(--c--globals--spacings--sm);
}

.p-md {
  padding: var(--c--globals--spacings--md);
}

.p-base {
  padding: var(--c--globals--spacings--base);
}

.hoverGroup .hoverGroupChild {
  opacity: 0;
  pointer-events: none;
}

.hoverGroup:hover .hoverGroupChild,
.hoverGroup:focus-within .hoverGroupChild {
  opacity: 1;
  pointer-events: auto;
}

.hidden {
  display: none;
}

